# AmazeFileManager

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .travis.yml  AmazeFileManager-play-release.apk  AmazeFileManager-release.apk  AndroidManifest.xml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  about app  build.gradle  gradle.properties  gradlew  gradlew.bat  jacoco.gradle  local.properties  manifest-merger-release-report.txt  privacy_policy.md  proguard.cfg  settings.gradle  spotless.license-java  text.txt  transifex.yml
.github/: FUNDING.yml  no-response.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  feature.yml
.github/PR_TEMPLATE/: pull_request_template.md
.github/workflows/: android-build.yml  android-debug-artifact-ondemand.yml  android-debug-artifact-release.yml  android-fast.yml  android-feature.yml  android-main.yml  android.yml  github-ci-fix.yml  maven.yml
.tx/: config
app/: .gitignore  build.gradle  proguard.cfg  tests-proguard.cfg
bug #2531/: crash_stack_#2531.txt  readme.txt  script#2531.py
bug #2998/: crash_stack_#2998.txt  script#2998.py
captures/: com.amaze.filemanager_2017.07.09_18.40.alloc
commons_compress_7z/: build.gradle  proguard-rules.pro
docs/: How AmazeFileManager works.docx
fastscroll/: build.gradle  proguard-rules.pro
file_operations/: .gitignore  build.gradle
file_operations/src/main/c/: CMakeLists.txt  rootoperations.c
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
portscanner/: build.gradle
res/anim/: fab_hide.xml  (+6 more)
(+2652 files in other folders)
